2024-01-21  Georg-Johann Lay  <avr@gjlay.de>

	Make code for 0-series ATmega from avrxmega3 work without -pm 0x4000.

	* load-flash.c (load_elf) <load_sections()>: Move call up and prior to
	the load of the program headers.
	<arch.flash_pm_offset>: Set to 0x4000 when ATmega808/9, ATmega1608/9,
	ATmega3208/9 or ATmega4808/9 is found in deviceinfo.

2024-01-15  Georg-Johann Lay  <avr@gjlay.de>

	* dejagnuboards/avrtest.exp (avrlibc_include_dir): Use -isystem to
	add include path, not -I.

2024-01-09  Georg-Johann Lay  <avr@gjlay.de>

	Ditch output to stderr from tested programs.

	* dejagnuboards/avrtest.exp (sim_load): Add -no-stderr to avrtest
	options.

2023-12-18  Georg-Johann Lay  <avr@gjlay.de>

	Generate the <mcu>-sim.exp board descriptions so that RAM layout
	is described thoroughly.

	* dejagnuboards/gen-exp.sh: Generate board descriptions that define
	Tdata and symbols: __DATA_REGION_ORIGIN__, __DATA_REGION_LENGTH__,
	__stack, __heap_end.
	* dejagnuboards/<mcu>-sim.exp: Regenerate.
	* dejagnuboards/avr128da32-sim.exp: New file.

2023-12-06  Georg-Johann Lay  <avr@gjlay.de>

	Add limited support for NVMCTRL_CTRLB.FLMAP Devices from
	the AVR64* and AVR128* families see a 32 KiB block of their
	program memeory in the RAM address space.  avrtest_init_rodata()
	is called from exit.c and copies that block from flash to RAM.

	* avrtest.h (avrtest_misc_flmap): New syscall.
	* avrtest.c (sys_misc): New static function.
	(func_SYSCALL) [sysno=21]: Call sys_misc.
	* dejagnuboards/exit.c (avr/io.h) [XMEGA]: Include it.
	(avrtest_init_flmap): New static function in section .init0.
	(avrtest_init_rodata): New static function in section .init4.

2023-12-04  Georg-Johann Lay  <avr@gjlay.de>

	* options.c (arch_desc) [avrxmega4]: Fix flash mask.
	* load-flash.c (phdr_name, phdr_flags_str): New static functions.
	(load_elf): Use them for better verbosity.
	Load all program headers to flash memory that have a
	load memory address below 0x800000 (data VMA).
