@@ -13,6 +13,7 @@ proc sim_load {dest prog args} {
     #    return [list "untested" ""]
     #}
     global avrtest_mmcu
+    global avrtest_opts
     global avrtest_dir
 
     set xmega_position [string last "xmega" ${avrtest_mmcu} ]
@@ -26,8 +27,10 @@ proc sim_load {dest prog args} {
     }
 
     set avrtest_exe "${avrtest_dir}/avrtest${xmega}"
+    set avrtest_options "-mmcu=${avrtest_mmcu} -no-stdin -no-stderr \
+		${avrtest_opts} -m 200000000"
 
-#warning "${avrtest_exe} -mmcu=${avrtest_mmcu} -no-stdin -m 200000000 $prog"
+#warning "${avrtest_exe} ${avrtest_options} $prog"
 
     # -no-stdin: Disabling stdin will prevent some malfunctioning programs
     #     from "hanging" because the user does not type something.
@@ -36,8 +39,9 @@ proc sim_load {dest prog args} {
     #     For now, just ignore writes to stderr.  Alternative is to
     #     [exec avrtest ... 2>@1] but then all stderr babbling would end up
     #     in `result`.
-    set result [exec ${avrtest_exe} -mmcu=${avrtest_mmcu} -no-stdin -no-stderr \
-		    -m 200000000 $prog]
+    # {*} is required to expand ${avrtest_options} so that it's not perceived
+    #     as a single option.
+    set result [exec ${avrtest_exe} {*}${avrtest_options} $prog]
 #warning ${result}
 
     # The variable $result now contains the output of the avrtest run.
